header of html and css files changed

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Solution Services</title> <!--Title changed to aid in better SEO-->
 </head>
 
 <body>
-    <div class="header">
+    <header class="header"> <!--Replaced div tag with header tag to incorporate semnatic html tags-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <section> <!--Replaced div tag with section to incorporate semantic html tags-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +22,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </section>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
