css changes and comments with some html change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header"> <!--Replaced div tag with header tag to incorporate semnatic html tags-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <section> <!--Replaced div tag with section to incorporate semantic html tags-->
+        <section class="list"> <!--Replaced div tag with section to incorporate semantic html tags and added a class selector to target the list element-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
