typo correction and rearranged selectors in css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <header class="header"> 
-        <!--Replaced div tag with header tag to incorporate semnatic html tags-->
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <!--Replaced div tag with header tag to incorporate semantic html tags-->
+        <h1>Hori<strong class="seo">seo</strong>n</h1>
+        <!--span tag replaced with strong (semantic) tag-->
         <section class="list"> 
             <!--Replaced div tag with section to incorporate semantic html tags and added a class selector to target the list element-->
             <ul>
@@ -27,12 +28,13 @@
             </ul>
         </section>
     </header>
-         <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="A digital marketing   meeting, involving four people, is in progress"/>
+    <main>
+        <img class="hero" src="./assets/images/digital-marketing-meeting.jpg"  alt="A digital marketing meeting, involving four people, is in progress"/>
           <!--Replaced div tag with img tag and added alt atribute to improve accessibility-->
         <section class="content"> 
             <!--Replaced div tags with semantic tag (section)-->
             <section class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A work table displaying a notebook with seo written on the cover"/>
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A work table displaying a notebook with 'seo' written on the cover"/>
                  <!--alt attribute added to improve accessibility-->
                 <h2>Search Engine Optimization</h2>
                     <p>
@@ -86,6 +88,7 @@
             </p>
         </aside>
     </section>
+    </main>
     <footer class="footer">
         <!--Replaced div tag with footer tag-->
         <h4>Made with ❤️️ by Horiseon</h4>
