regrouped selectors in css and renamed class selector in html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--Replaced div tag with header tag to incorporate semantic html tags-->
         <h1>Hori<strong class="seo">seo</strong>n</h1>
         <!--span tag replaced with strong (semantic) tag-->
-        <section class="list"> 
+        <section class="headernavigationbar"> 
             <!--Replaced div tag with section to incorporate semantic html tags and added a class selector to target the list element-->
             <ul>
                 <li>
@@ -29,11 +29,11 @@
         </section>
     </header>
     <main>
-        <img class="hero" src="./assets/images/digital-marketing-meeting.jpg"  alt="A digital marketing meeting, involving four people, is in progress"/>
+        <img class="mainimage" src="./assets/images/digital-marketing-meeting.jpg"  alt="A digital marketing meeting, involving four people, is in progress"/>
           <!--Replaced div tag with img tag and added alt atribute to improve accessibility-->
         <section class="content"> 
             <!--Replaced div tags with semantic tag (section)-->
-            <section class="search-engine-optimization">
+            <section class="content-main">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A work table displaying a notebook with 'seo' written on the cover"/>
                  <!--alt attribute added to improve accessibility-->
                 <h2>Search Engine Optimization</h2>
@@ -41,7 +41,7 @@
                         The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                     </p>
             </section>
-            <section class="online-reputation-management">
+            <section class="content-main">
                 <!--id selector removed-->
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A laptop with the word reputation displayed on the screen" /> 
                 <!--alt attribute added to improve accessibility-->
@@ -50,7 +50,7 @@
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                     </p>
             </section>
-            <section class="social-media-marketing">
+            <section class="content-main">
                 <!--id selector removed-->
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A colourful display of many widgets "/> 
                 <!--alt attribute added to improve accessibility-->
@@ -62,8 +62,8 @@
         </section>
     <section class="benefits">
         <!--div tag changed to section tag-->
-        <aside class="benefit-lead">
-            <!--div tag changed to aside tag for ontent under this section-->
+        <aside class="benefits-content">
+            <!--div tag changed to aside tag for content under this section-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="A diagrammatic representation for lead generation"/>
              <!--alt attribute added to improve accessibility-->
@@ -71,7 +71,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
-        <aside class="benefit-brand">
+        <aside class="benefits-content">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="A diagrammatic representation for brand awareness"/>
              <!--alt attribute added to improve accessibility-->
@@ -79,7 +79,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
-        <aside class="benefit-cost">
+        <aside class="benefits-content">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="A diagrammatic representation for cst Management">
             <!-- closing tag for img removed and alt attribute added to improve accessibility-->
