typos corrected and readme updated

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </aside>
         <aside class="benefits-content">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="A diagrammatic representation for cst Management">
+            <img src="./assets/images/cost-management.png" alt="A diagrammatic representation for cost Management">
             <!-- closing tag for img removed and alt attribute added to improve accessibility-->
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -92,7 +92,7 @@
     <footer class="footer">
         <!--Replaced div tag with footer tag-->
         <h4>Made with ❤️️ by Horiseon</h4>
-        <!--h2 tag changed to h4 to follow best practice-->
+        <!--h2 tag changed to h4 to follow best practice for heading hierarchy-->
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
