--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horiseon Social Solution Services</title> 
     <!--Title changed to aid in SEO-->
 </head>
@@ -33,7 +34,7 @@
           <!--Replaced div tag with img tag and added alt atribute to improve accessibility-->
         <section class="content"> 
             <!--Replaced div tags with semantic tag (section)-->
-            <section class="content-main">
+            <section id ="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A work table displaying a notebook with 'seo' written on the cover"/>
                  <!--alt attribute added to improve accessibility-->
                 <h2>Search Engine Optimization</h2>
@@ -41,8 +42,7 @@
                         The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                     </p>
             </section>
-            <section class="content-main">
-                <!--id selector removed-->
+            <section id="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A laptop with the word reputation displayed on the screen" /> 
                 <!--alt attribute added to improve accessibility-->
                 <h2>Online Reputation Management</h2>
@@ -50,8 +50,7 @@
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                     </p>
             </section>
-            <section class="content-main">
-                <!--id selector removed-->
+            <section id="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A colourful display of many widgets "/> 
                 <!--alt attribute added to improve accessibility-->
                 <h2>Social Media Marketing</h2>
